fix: Calendar 엔티티 times 필드 추가 및 관련 서비스 로직 개선